// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RhsComment should match snapshot 1`] = `
<div
  aria-label=""
  className="a11y__section post post--thread same--root post--comment current--user post--compact"
  id="rhsPost_id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="listitem"
  tabIndex="-1"
>
  <Connect(injectIntl(PostPreHeader))
    channelId="channel_id"
    isFlagged={true}
    isPinned={false}
  />
  <div
    className="post__content"
    role="application"
  >
    <div
      className="post__img"
    >
      <Connect(PostProfilePicture)
        compactDisplay={true}
        isBusy={false}
        isRHS={true}
        post={
          Object {
            "channel_id": "channel_id",
            "create_at": 1502715365009,
            "delete_at": 0,
            "edit_at": 1502715372443,
            "id": "id",
            "is_pinned": false,
            "message": "post message",
            "original_id": "",
            "parent_id": "",
            "pending_post_id": "",
            "props": Object {},
            "root_id": "",
            "type": "",
            "update_at": 1502715372443,
            "user_id": "user_id",
          }
        }
        userId="user_id"
      />
    </div>
    <div>
      <div
        className="post__header"
      >
        <div
          className="col col__name"
        >
          <Connect(UserProfile)
            hasMention={true}
            isBusy={false}
            isRHS={true}
            userId="user_id"
          />
        </div>
        <div
          className="col"
        >
          <Connect(PostTime)
            eventTime={1502715365009}
            isPermalink={true}
            location="RHS_COMMENT"
            postId="id"
          />
        </div>
      </div>
      <div
        className="post__body"
      >
        <div
          className=" post--edited"
        >
          <MessageWithAdditionalContent
            isEmbedVisible={false}
            pluginPostTypes={Object {}}
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
            previewCollapsed=""
            previewEnabled={false}
          />
        </div>
        <Connect(ReactionList)
          isReadOnly={false}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/RhsComment should match snapshot hovered 1`] = `
<div
  aria-label=""
  className="a11y__section post post--thread same--root post--comment current--user post--compact"
  id="rhsPost_id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="listitem"
  tabIndex="-1"
>
  <Connect(injectIntl(PostPreHeader))
    channelId="channel_id"
    isFlagged={true}
    isPinned={false}
  />
  <div
    className="post__content"
    role="application"
  >
    <div
      className="post__img"
    >
      <Connect(PostProfilePicture)
        compactDisplay={true}
        isBusy={false}
        isRHS={true}
        post={
          Object {
            "channel_id": "channel_id",
            "create_at": 1502715365009,
            "delete_at": 0,
            "edit_at": 1502715372443,
            "id": "id",
            "is_pinned": false,
            "message": "post message",
            "original_id": "",
            "parent_id": "",
            "pending_post_id": "",
            "props": Object {},
            "root_id": "",
            "type": "",
            "update_at": 1502715372443,
            "user_id": "user_id",
          }
        }
        userId="user_id"
      />
    </div>
    <div>
      <div
        className="post__header"
      >
        <div
          className="col col__name"
        >
          <Connect(UserProfile)
            hasMention={true}
            isBusy={false}
            isRHS={true}
            userId="user_id"
          />
        </div>
        <div
          className="col"
        >
          <Connect(PostTime)
            eventTime={1502715365009}
            isPermalink={true}
            location="RHS_COMMENT"
            postId="id"
          />
        </div>
        <div
          className="col post-menu"
        >
          <Connect(DotMenu)
            enableEmojiPicker={true}
            handleAddReactionClick={[Function]}
            handleDropdownOpened={[Function]}
            isFlagged={true}
            isMenuOpen={false}
            isReadOnly={false}
            location="RHS_COMMENT"
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
          />
          <Connect(PostReaction)
            channelId="channel_id"
            getDotMenuRef={[Function]}
            location="RHS_COMMENT"
            postId="id"
            showEmojiPicker={false}
            teamId="team_id"
            toggleEmojiPicker={[Function]}
          />
          <Connect(PostFlagIcon)
            isFlagged={true}
            location="RHS_COMMENT"
            postId="id"
          />
        </div>
      </div>
      <div
        className="post__body"
      >
        <div
          className=" post--edited"
        >
          <MessageWithAdditionalContent
            isEmbedVisible={false}
            pluginPostTypes={Object {}}
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
            previewCollapsed=""
            previewEnabled={false}
          />
        </div>
        <Connect(ReactionList)
          isReadOnly={false}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/RhsComment should match snapshot hovered on deleted post 1`] = `
<div
  aria-label=""
  className="a11y__section post post--thread same--root post--comment current--user post--compact"
  id="rhsPost_id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="listitem"
  tabIndex="-1"
>
  <Connect(injectIntl(PostPreHeader))
    channelId="channel_id"
    isFlagged={true}
    isPinned={false}
  />
  <div
    className="post__content"
    role="application"
  >
    <div
      className="post__img"
    >
      <Connect(PostProfilePicture)
        compactDisplay={true}
        isBusy={false}
        isRHS={true}
        post={
          Object {
            "channel_id": "channel_id",
            "create_at": 1502715365009,
            "delete_at": 0,
            "edit_at": 1502715372443,
            "id": "id",
            "is_pinned": false,
            "message": "post message",
            "original_id": "",
            "parent_id": "",
            "pending_post_id": "",
            "props": Object {},
            "root_id": "",
            "state": "DELETED",
            "type": "",
            "update_at": 1502715372443,
            "user_id": "user_id",
          }
        }
        userId="user_id"
      />
    </div>
    <div>
      <div
        className="post__header"
      >
        <div
          className="col col__name"
        >
          <Connect(UserProfile)
            hasMention={true}
            isBusy={false}
            isRHS={true}
            userId="user_id"
          />
        </div>
        <div
          className="col"
        >
          <Connect(PostTime)
            eventTime={1502715365009}
            isPermalink={false}
            location="RHS_COMMENT"
            postId="id"
          />
        </div>
        <div
          className="col col__remove"
        >
          <button
            className="post__remove theme color--link style--none"
            onClick={[Function]}
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <div
        className="post__body"
      >
        <div
          className=" post--edited"
        >
          <MessageWithAdditionalContent
            isEmbedVisible={false}
            pluginPostTypes={Object {}}
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "state": "DELETED",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
            previewCollapsed=""
            previewEnabled={false}
          />
        </div>
        <Connect(ReactionList)
          isReadOnly={false}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "state": "DELETED",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/RhsComment should match snapshot mobile 1`] = `
<div
  aria-label=""
  className="a11y__section post post--thread same--root post--comment current--user post--compact"
  id="rhsPost_id"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="listitem"
  tabIndex="-1"
>
  <Connect(injectIntl(PostPreHeader))
    channelId="channel_id"
    isFlagged={true}
    isPinned={false}
  />
  <div
    className="post__content"
    role="application"
  >
    <div
      className="post__img"
    >
      <Connect(PostProfilePicture)
        compactDisplay={true}
        isBusy={false}
        isRHS={true}
        post={
          Object {
            "channel_id": "channel_id",
            "create_at": 1502715365009,
            "delete_at": 0,
            "edit_at": 1502715372443,
            "id": "id",
            "is_pinned": false,
            "message": "post message",
            "original_id": "",
            "parent_id": "",
            "pending_post_id": "",
            "props": Object {},
            "root_id": "",
            "type": "",
            "update_at": 1502715372443,
            "user_id": "user_id",
          }
        }
        userId="user_id"
      />
    </div>
    <div>
      <div
        className="post__header"
      >
        <div
          className="col col__name"
        >
          <Connect(UserProfile)
            hasMention={true}
            isBusy={false}
            isRHS={true}
            userId="user_id"
          />
        </div>
        <div
          className="col"
        >
          <Connect(PostTime)
            eventTime={1502715365009}
            isPermalink={true}
            location="RHS_COMMENT"
            postId="id"
          />
        </div>
        <div
          className="col post-menu"
        >
          <Connect(DotMenu)
            enableEmojiPicker={true}
            handleAddReactionClick={[Function]}
            handleDropdownOpened={[Function]}
            isFlagged={true}
            isMenuOpen={false}
            isReadOnly={false}
            location="RHS_COMMENT"
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
          />
          <Connect(PostReaction)
            channelId="channel_id"
            getDotMenuRef={[Function]}
            location="RHS_COMMENT"
            postId="id"
            showEmojiPicker={false}
            teamId="team_id"
            toggleEmojiPicker={[Function]}
          />
        </div>
      </div>
      <div
        className="post__body"
      >
        <div
          className=" post--edited"
        >
          <MessageWithAdditionalContent
            isEmbedVisible={false}
            pluginPostTypes={Object {}}
            post={
              Object {
                "channel_id": "channel_id",
                "create_at": 1502715365009,
                "delete_at": 0,
                "edit_at": 1502715372443,
                "id": "id",
                "is_pinned": false,
                "message": "post message",
                "original_id": "",
                "parent_id": "",
                "pending_post_id": "",
                "props": Object {},
                "root_id": "",
                "type": "",
                "update_at": 1502715372443,
                "user_id": "user_id",
              }
            }
            previewCollapsed=""
            previewEnabled={false}
          />
        </div>
        <Connect(ReactionList)
          isReadOnly={false}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
